--- a/package.json
+++ b/package.json
@@ -2,7 +2,11 @@
   "name": "goblin-blackrock",
   "version": "1.1.9",
   "description": "goblin-blackrock",
-  "author": "",
+  "author": "Epsitec SA",
+  "contributors": [
+    "Samuel Loup <loup@epsitec.ch>",
+    "Mathieu Schroeter <schroeter@epsitec.ch>"
+  ],
   "license": "MIT",
   "main": "lib/blackrock.js",
   "config": {
